[package]
name = "graviomanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
fs_extra = "1.3.0"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1.3", features = ["client", "http1", "http2", "service"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.20"
plist = "1.6.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shellexpand = "3.1.0"
simple_logger = "4.3.3"
tabled = "0.15.0"
tokio = { version = "1.36.0", features = ["full", "macros"] }
url = "2.5.0"
