[package]
name = "graviomanager"
version = "0.3.2"
authors = ["nf"]
description = "Manages Asteria products on a machine"
documentation = "github.com/gravio/graviomanager"
readme = "README.md"
homepage = "github.com/gravio/graviomanager"
license = "MIT"
keywords = ["package", "manager"]
categories = ["command-line-utilities", "developer-tools"]
publish = false
edition = "2021"
build = "build/build.rs"


[package.metadata.winresource]
OriginalFilename = "graviomanager.exe"
LegalCopyright = "Copyright © 2024"
ProductName = "Gravio Manager"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
axum = "0.7.4"
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
fs_extra = "1.3.0"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1.3", features = ["client", "http1", "http2", "service"] }
indicatif = "0.17.8"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.20"
plist = "1.6.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_json5 = "0.1.0"
shellexpand = "3.1.0"
simple_logger = "4.3.3"
tabled = "0.15.0"
tokio = { version = "1.36.0", features = ["full", "macros"] }
url = "2.5.0"
walkdir = "2.4.0"

[build-dependencies]
winresource = "0.1.17"
adler = "1.0.2"
